fix footer spacing

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ svg {
 footer.social-icons {
     gap: 20px;
     border-top: 1px solid #333;
-    margin: 0;
+    margin: 0 0 4px 0;
     padding: 20px 0 0 0;
 }
 
